Fix z-index of the toolbar

--- a/assets/less/events.less
+++ b/assets/less/events.less
@@ -86,7 +86,7 @@
 		position: absolute;
 		top: 11px;
 		right: 0;
-		z-index: 10000;
+		z-index: 9;
 		.box-shadow;
 		
 		.delete-event, .edit-event {
